add style for mobile size

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,3 +1,18 @@
+:root {
+    --color-strong-cyan: #26BBA4;
+    --color-strong-cyan-shadow: #26BBA480;
+    --color-light-blue: #6174FF;
+    --color-light-blue-shadow: #6174FF80;
+    --color-grayish-blue: #9EABB2;
+    --color-grayish-blue-10: #9EABB21A;
+    --color-dark-grayish-blue: #4C545C;
+    --color-white: #FFF;
+
+    --ff-body: 'Bai Jamjuree', sans-serif;
+    --fw-regular: 400;
+    --fw-semi-bold: 600;
+}
+
 * {
     margin: 0;
     padding: 0;
