--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -1,1 +1,7 @@
-
+@import "buttons";
+@import "cta-buttons-group";
+@import "logo";
+@import "feature-card";
+@import "section-header";
+@import "links";
+@import "socials";
