--- a/sass/layout/_global.scss
+++ b/sass/layout/_global.scss
@@ -1,1 +1,9 @@
-
+@import "container";
+@import "header";
+@import "main";
+@import "snippets-section";
+@import "access-section";
+@import "workflow-section";
+@import "partners-section";
+@import "cta-section";
+@import "footer";
