--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,4 +9,19 @@
     &__logo {
         margin-bottom: -0.6rem;
     }
+
+    @media only screen and (min-width: $bp-desktop) {
+        padding: 3.9rem 16.5rem;
+
+        grid-template-columns: min-content auto min-content;
+        grid-template-rows: 7.2rem;
+        
+        justify-items: start;
+        column-gap: 13.5rem;
+        row-gap: 0rem;
+
+        &__logo {
+            margin-bottom: 0rem;
+        }
+    }
 }
