--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,12 +4,14 @@ body {
     font-size: 1.6rem;
     line-height: 2.6rem;
     letter-spacing: 0.012rem;
+    color: var(--color-grayish-blue);
 }
 
 #heading {
     font-family: var(--ff-heading);
     font-weight: var(--fw-semi-bold);
     line-height: normal;
+    color: var(--color-dark-grayish-blue);
 }
 
 .heading-1 {
@@ -28,4 +30,22 @@ body {
     @extend #heading;
     font-size: 2.4rem;
     letter-spacing: -0.039rem;
+}
+
+@media only screen and (min-width: $bp-desktop) {
+    body {
+        font-size: 1.8rem;
+        line-height: 3rem;
+        letter-spacing: 0.014rem;
+    }
+    
+    .heading-1 {
+        font-size: 4.6rem;
+        letter-spacing: -0.075rem
+    }
+    
+    .heading-2 {
+        font-size: 3.6rem;
+        letter-spacing: -0.059rem
+    }
 }
