--- a/sass/components/_global.scss
+++ b/sass/components/_global.scss
@@ -1,5 +1,5 @@
 @import "buttons";
-@import "cta-buttons-group";
+// @import "cta-buttons-group";
 @import "logo";
 @import "feature-card";
 @import "section-header";
