--- a/sass/components/_links.scss
+++ b/sass/components/_links.scss
@@ -21,8 +21,13 @@
         }
     }
 
-    // @media only screen and (min-width: $bp-desktop) {
-    //     row-gap: 1.2rem;
-    //     column-gap: 9.4rem;
-    // }
+    @media only screen and (min-width: $bp-desktop) {
+        row-gap: 1.2rem;
+        column-gap: 3rem;
+        align-items: flex-start;
+
+        &__link {
+            width: 16rem;
+        }
+    }
 }
