--- a/sass/components/_section-header.scss
+++ b/sass/components/_section-header.scss
@@ -1,13 +1,10 @@
 .section-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: grid;
     row-gap: 1.6rem;
-    
     text-align: center;
-    color: var(--color-grayish-blue);
 
-    & > *[class^="heading"] {
-        color: var(--color-dark-grayish-blue);
+    @media only screen and (min-width: $bp-desktop) {
+        row-gap: 1.9rem;
+        max-width: 73rem;
     }
 }
