--- a/sass/layout/_cta-section.scss
+++ b/sass/layout/_cta-section.scss
@@ -4,4 +4,26 @@
     display: grid;
     justify-items: center;
     row-gap: 4.6rem;
+
+    &__buttons {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 2.4rem;   
+    }
+
+    &--in-header {
+        padding: 0rem;
+    }
+
+    @media only screen and (min-width: $bp-desktop) {
+        padding: 0rem 0rem 15rem;
+        row-gap: 4.8rem;
+
+        &__buttons {
+            flex-direction: row;
+            column-gap: 1.6rem;
+            row-gap: 0rem;
+        }
+    }
 }
