--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,17 @@
 .header {
     padding: 12.3rem 3.2rem 16rem;
+
     display: grid;
     justify-items: center;
-    row-gap: 4.8rem;
+    row-gap: 6.6rem;
 
     background: no-repeat url("../images/bg-header-mobile.png");
 
-    &__logo {
-        margin-bottom: 1.6rem;
+    @media only screen and (min-width: $bp-desktop) {
+        padding: 12.8rem 0rem 15rem;
+        font-size: 2rem;
+        row-gap: 5.3rem;
+
+        background: no-repeat url("../images/bg-header-desktop.png");
     }
 }
