--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -5,13 +5,13 @@
     justify-items: center;
     row-gap: 6.6rem;
 
-    background: no-repeat url("../images/bg-header-mobile.png");
+    background: top / contain no-repeat url("../images/bg-header-mobile.png");
 
     @media only screen and (min-width: $bp-desktop) {
         padding: 12.8rem 0rem 15rem;
         font-size: 2rem;
         row-gap: 5.3rem;
 
-        background: no-repeat url("../images/bg-header-desktop.png");
+        background: top / contain no-repeat url("../images/bg-header-desktop.png");
     }
 }
